# demos

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .snyk  COMMUNITY.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  code.json  demos.code-workspace  package-lock.json  sonar-project.properties
data-migration/: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  APPS.md  CHANGELOG.md  CODE_REVIEW.md  Makefile  README.md  docker-compose.test.yml  package-lock.json  pmda_highlights_reel.md  pyproject.toml
data-migration/docs/: .gitignore  Gemfile  Makefile  README.adoc  attributes.adoc  docinfo.html  mermaid.css  toc.adoc
data-migration/migration/: __init__.py  cli.py  duck.py  lib.py  prisma_schema.py  secrets.py
data-migration/pgloader/: casts.load  delta.tmpl.load  delta_tables.tsv  drop_list.txt  schema.load
data-migration/reports/: pgm_dtl_tag_mapping.csv  prisma_ddl.manifest.json  prisma_ddl.sha256  prisma_schema.sha256  source_target_columns.csv
data-migration/runbooks/: cutover.md  demos-devcontainer-load.md  dress-rehearsal-probe.md  revalidate-jsonb.md  rollback.md
data-migration/scripts/: check_sql_frontmatter.py  crosswalk_audit.py  cutover.sh  derivability_audit.py  ensure_test_db.sh  generate_fk_candidates.sql  migrate_local.py  mk_pretty.py  propose_mappings.py  provision_scratch.sh  spin_up.sh  sql_fmt.py
data-migration/tests/: conftest.py  test_amendment_flow_trace_manifest.py  test_build.py  test_cli.py  test_constraints.py  test_crosswalk_audit.py  test_demonstration_flow_trace_manifest.py  test_demonstration_idmap.py  test_derivability_audit.py  test_diagnose.py  test_drop_list.py  test_duck.py  test_env_dsn.py  test_fetch_prisma.py  test_fetch_prisma_schema.py  test_filter_overrides.py  test_fk_candidates.py  test_flip.py  test_freeze.py  test_gate_graph.py  test_init_pg.py  test_lib.py  test_load_delta.py  test_load_fidelity.py  test_load_full.py  test_migrate_local.py  test_parity.py  test_pgloader_argv.py  test_pgloader_load_mode.py  test_pgloader_log.py  test_pgloader_templates.py  (+15 more)
(+4320 files in other folders)
