[project]
name = "demos-migration"
version = "0.7.0"
description = "MySQL CMS Demonstrations -> DEMOS PostgreSQL warm cutover"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.14.2",
  "tenacity>=8.2",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "duckdb>=1.0",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ty>=0.0.1a1",
  "ruff>=0.5",
  "sqlfluff>=3",
  "pre-commit>=3",
  "types-PyYAML",
  # Runtime deps of the vendored fake-demos generator (tests/sql/fixtures/
  # fake_demos), used only by the deeper-layer SQL harness.
  "faker>=30",
  "pandas>=2.2",
  # MySQL driver for the load-fidelity integration tier (tests/integration);
  # the source-side seeding/queries only.
  "pymysql>=1.1",
]

[project.scripts]
migrate = "migration.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["migration*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored upstream generator (lightly adapted); not held to this repo's style.
extend-exclude = ["tests/sql/fixtures/fake_demos/generator.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF", "PT"]
ignore = ["E501"]

[tool.ty]
# Astral's type checker. Defaults are reasonable; tighten over time.

[tool.ty.src]
include = ["migration", "tests"]
# Vendored upstream generator (lightly adapted); not type-checked.
exclude = ["tests/sql/fixtures/fake_demos/generator.py"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config"
filterwarnings = ["error"]
markers = [
  "integration: live-engine tests needing real MySQL/Postgres (gated on *_TEST_DSN / REFERENCE_PG_URL env vars; skipped otherwise). Run the docker-compose tier via `make compose-up`.",
]
